# database-helper-application

./: .env  .gitignore  LICENSE  README.md  drizzle.config.ts  local.db  package-lock.json  package.json  tsconfig.json
$HOME/.tauri/: myapp.key  myapp.key.pub
.github/workflows/: build.yml  release.yml
drizzle/: 0000_secret_exodus.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
src/: app.css  app.html
src-tauri/: .env  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/database_connection/: app_database_connection.rs  maria_database_connection.rs  mod.rs  mongo_database_connection.rs  mssql_database_connection.rs  mysql_database_connection.rs  oracle_database_connection.rs  postgres_database_connection.rs  sqlite_database_connection.rs  surreal_database_connection.rs
src-tauri/src/dialog/: file_select_dialog.rs  mod.rs
src-tauri/src/information/: application_information.rs  device_information.rs  mod.rs  network_information.rs
src-tauri/src/models/structs/: docker_struct.rs  erd_struct.rs  mod.rs  os_information_struct.rs  schema_struct.rs
src-tauri/src/modules/: bcrypt_controller.rs  docker_controller.rs  mod.rs  route_controller.rs  terminal_controller.rs  window_controller.rs
src/lib/asset/image/svg/: about-svg.ts  add-svg.ts  appearance-svg.ts  bluemark-svg.ts  build-svg.ts  close-svg.ts  column-svg.ts  container-svg.ts  database-svg.ts  delete-svg.ts  docker-svg.ts  document-svg.ts  edit-svg.ts  error-svg.ts  file-svg.ts  folder-svg.ts  general-settings-svg.ts  image-svg.ts  maintenance-svg.ts  mariadb-svg.ts  menu-svg.ts  microsoft-sql-server-svg.ts  (+24 more)
src/lib/asset/style/: font.style.css
src/lib/component/global/: AppDock.svelte  AppToolBar.svelte
src/lib/env/: app.env.ts
src/lib/model/data/: content-type.data.ts  release-note.data.ts  route.data.ts
src/lib/model/enum/: content-type.enum.ts  font.enum.ts  theme.enum.ts
src/lib/model/interface/: docker.interface.ts  erd.interface.ts  mssql.interface.ts  os-information.interface.ts  postgres.interface.ts  release-note.interface.ts  route.interface.ts  schema.interface.ts
src/lib/model/type/: query-file-collection.type.ts
src/lib/server/db/: data.sql  index.ts  schema.ts
src/lib/service/query/: init.query.ts
src/lib/store/stalker/: DockerStalker.svelte
src/lib/store/state/: docker.state.svelte.ts  font.state.svelte.ts  selectedDatabase.svelte.ts  selectedFile.svelte.ts  theme.state.svelte.ts  user.state.svelte.ts
src/lib/tool/: docker.tool.ts  sqlite.tool.ts
src/lib/util/: network.util.ts  router.util.ts  update.util.ts  window.util.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/app/: +layout.svelte  +page.svelte
src/routes/app/docker-dashboard/: +layout.svelte  +layout.ts  +page.svelte
src/routes/app/documentation-dashboard/: +layout.svelte  +layout.ts  +page.svelte
src/routes/app/settings-dashboard/: +layout.svelte  +layout.ts  +page.svelte
src/routes/app/workspace-dashboard/: +page.svelte
src/routes/auth/: +layout.svelte  +page.svelte
src/routes/auth/forget-password/: +page.svelte
src/routes/auth/login/: +page.svelte
src/routes/auth/profile/: +page.svelte
src/routes/auth/signup/: +page.svelte
~/.tauri/: myapp.key  myapp.key.pub
(+53 files in other folders)
