[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
reqwest = {version = "0.11", features = ["json"] }
bollard = "0.18.1"
sqlite = "0.37.0"
oracle = "0.6.3"
postgres = "0.19.10"
mysql = "26.0.0"
mongodb = "3.2.3"
dotenv = "0.15.0"
bcrypt = "0.17.0"
keyring = {version = "3.6.2", features = ["apple-native", "windows-native", "sync-secret-service"]}


[profile.dev]
incremental = true


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
