[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"


[lib]
name = "app_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]


[build-dependencies.tauri-build]
version = "2.1.1"
features = [ ]


[dependencies]
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = "2.3.1"
bollard = "0.18.1"
oracle = "0.6.3"
mysql = "26.0.0"
mongodb = "3.2.3"
bcrypt = "0.17.0"
tauri-plugin-dialog = "2"
sqlite = "0.37.0"
dirs = "6.0.0"
postgres = "0.19.10"
futures-util = "0.3"


[dependencies.serde]
version = "1.0"
features = [ "derive" ]


[dependencies.tauri]
version = "2.4.1"
features = [ ]


[dependencies.reqwest]
version = "0.11"
features = [ "json" ]


[profile.dev]
incremental = true


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
