[package]
name = "database-helper-application"
version = "0.1.0"
description = "Database Management Application"
authors = [ "Zarni Hlawn" ]
license = "MIT"
repository = "https://github.com/zarnihlawn/database-helper-application"
edition = "2021"
rust-version = "1.77.2"


[lib]
name = "app_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]


[build-dependencies.tauri-build]
version = "2.1.1"
features = [ ]


[dependencies]
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = "2.3.1"
bollard = "0.18.1"
mongodb = "3.2.3"
bcrypt = "0.17.0"
tauri-plugin-dialog = "2"
dirs = "6.0.0"
tiberius = "0.12.3"
surrealdb = "1.5.6"
tokio-util = "0.7.14"
url = "2.5.4"
tauri-plugin-updater = "2.7.1"


[dependencies.tokio]
version = "1.36.0"
features = [ "full" ]


[dependencies.sqlx]
version = "0.7.0"
features = [ "sqlite", "runtime-tokio", "mysql", "postgres" ]


[dependencies.serde]
version = "1.0"
features = [ "derive" ]


[dependencies.tauri]
version = "2.4.1"
features = [ ]


[dependencies.reqwest]
version = "0.11"
features = [ "json" ]


[profile.dev]
incremental = true


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
